# astroplant-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  openapi.yaml  shell.nix  sqlx-data.json
.github/ISSUE_TEMPLATE/: developer-bug-report.md  feature_request.md  user-bug-report.md
.github/workflows/: rust.yml
astroplant-api/: Cargo.toml
astroplant-api/src/: cursors.rs  database.rs  extract.rs  helpers.rs  lib.rs  main.rs  problem.rs  rate_limit.rs  response.rs  schema.rs  views.rs
astroplant-api/src/admin/: insert_astroplant_definitions.rs  migrate.rs  mod.rs
astroplant-api/src/authorization/: mod.rs
astroplant-api/src/controllers/: mod.rs
astroplant-api/src/controllers/kit/: archive.rs  mod.rs
astroplant-api/src/controllers/kit_configuration/: kit_configuration.rs  mod.rs  peripheral.rs
astroplant-api/src/controllers/kit_rpc/: mod.rs
astroplant-api/src/controllers/me/: auth.rs  mod.rs
astroplant-api/src/controllers/measurement/: mod.rs
astroplant-api/src/controllers/media/: mod.rs
astroplant-api/src/controllers/peripheral_definition/: mod.rs
astroplant-api/src/controllers/permission/: mod.rs
astroplant-api/src/controllers/quantity_type/: mod.rs
astroplant-api/src/controllers/user/: mod.rs
astroplant-api/src/models/: kit.rs  kit_configuration.rs  kit_membership.rs  measurement.rs  media.rs  mod.rs  peripheral.rs  peripheral_definition.rs  peripheral_definition_expected_quantity_type.rs  quantity_type.rs  user.rs
astroplant-api/src/mqtt/: mod.rs
astroplant-api/src/utils/: mod.rs  tracing.rs
astroplant-api/src/websocket/: mod.rs
astroplant-auth/: Cargo.toml
astroplant-auth/src/: hash.rs  lib.rs  random.rs  token.rs
astroplant-mqtt/: Cargo.toml  README.md  build.rs
astroplant-mqtt-ingest/: Cargo.toml
astroplant-mqtt-ingest/src/: database.rs  main.rs  task.rs
astroplant-mqtt/src/: kit_rpc.rs  lib.rs  server_rpc.rs
astroplant-object/: Cargo.toml  README.md
astroplant-object/src/: lib.rs
astroplant-websocket/: Cargo.toml
astroplant-websocket/src/: lib.rs  subscribers.rs  types.rs  web_socket_session.rs
migrations/2020-000_kits/: down.sql  up.sql
migrations/2020-001_kit-configurations/: down.sql  up.sql
migrations/2020-002_peripheral-definitions/: down.sql  up.sql
migrations/2020-003_quantity-types/: down.sql  up.sql
migrations/2020-004_peripheral-definitions-expected-quantity-types/: down.sql  up.sql
migrations/2020-005_peripherals/: down.sql  up.sql
migrations/2020-006_raw-measurements/: down.sql  up.sql
migrations/2020-007_aggregate-measurements/: down.sql  up.sql
migrations/2020-008_media/: up.sql
migrations/2020-009_users/: up.sql
migrations/2020-010_kit-memberships/: down.sql  up.sql
migrations/2023-09-01-125329_dont-leak-media/: down.sql  up.sql
migrations/2023-09-01-141454_add-queue-media-deletion/: down.sql  up.sql
migrations/2024-03-15-155708_create-kit-last-seen/: down.sql  up.sql
migrations/2024-03-15-155708_create_kit_last_seen/: down.sql  up.sql
migrations/2024-03-15-161913_populate-kit-last-seen/: down.sql  up.sql
migrations/2024-03-15-161913_populate_kit_last_seen/: up.sql
migrations/2024-03-21-133127_add-kit-configuration-activation-timestamp/: down.sql  up.sql
migrations/2024-03-21-154534_change-kit-configurations-never-used-to-generated/: down.sql  up.sql
migrations/2024-03-21-163750_add-kit-configurations-kits-users-timestamps/: down.sql  up.sql
migrations/2024-03-21-205107_make-active-kit-configuration-partially-unique/: down.sql  up.sql
nix/: build.nix
random-string/: Cargo.toml
random-string/src/: lib.rs
src/: authentication.rs  cursors.rs  database.rs  error.rs  futures_compat_shim.rs  helpers.rs  main.rs  problem.rs  rate_limit.rs  response.rs  schema.rs  views.rs
src/authorization/: mod.rs
src/controllers/: mod.rs
src/controllers/kit/: mod.rs
src/controllers/kit_configuration/: kit_configuration.rs  mod.rs  peripheral.rs
src/controllers/kit_rpc/: mod.rs
src/controllers/me/: auth.rs  mod.rs
src/controllers/measurement/: mod.rs
src/controllers/media/: mod.rs
src/controllers/peripheral_definition/: mod.rs
src/controllers/permission/: mod.rs
src/controllers/quantity_type/: mod.rs
src/controllers/user/: mod.rs
src/models/: kit.rs  kit_configuration.rs  kit_membership.rs  measurement.rs  media.rs  mod.rs  peripheral.rs  peripheral_definition.rs  peripheral_definition_expected_quantity_type.rs  quantity_type.rs  user.rs
src/mqtt/: mod.rs
src/utils/: mod.rs
src/websocket/: mod.rs
