[package]
name = "astroplant-rs-api"
version = "1.0.0-alpha.1"
authors = ["Thomas Churchman <thomas@kepow.org>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.6.2"
uuid = "0.7.0"
astroplant-auth = { path = "./astroplant-auth" }
astroplant-mqtt = { path = "./astroplant-mqtt" }
astroplant-websocket = { path = "./astroplant-websocket" }
random-string = { path = "./random-string" }
once_cell = "1.2.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "^0.5"
diesel = { version = "1.4.3", features = ["postgres", "numeric", "r2d2", "chrono", "serde_json", "uuidv07"] }
bigdecimal = "0.1.0"
ratelimit_meter = "4.1.1"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
erased-serde = "0.3"
validator = "0.9.0"
validator_derive = "0.9.0"
heck = "0.3.1"
futures = { version = "0.3.4", features = ["thread-pool"] }
warp = "0.2.1"
tokio = { version = "0.2", features = ["macros", "rt-core", "blocking"] }
crossbeam = "=0.7.2"
strum = "0.16.0"
strum_macros = "0.16.0"
itertools = "0.8.0"
valico = "2"
