[package]
name = "astroplant-api"
version = "1.0.0-alpha.1"
authors = ["Thomas Churchman <thomas@kepow.org>"]
edition = "2018"

[dependencies]
tracing = "0.1.21"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde"] }
astroplant-auth = { path = "./astroplant-auth" }
astroplant-mqtt = { path = "./astroplant-mqtt" }
astroplant-object = { path = "./astroplant-object" }
astroplant-websocket = { path = "./astroplant-websocket" }
random-string = { path = "./random-string" }
once_cell = "1.4"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
diesel = { version = "1.4.5", features = ["postgres", "numeric", "r2d2", "chrono", "serde_json", "uuidv07"] }
bigdecimal = "0.1.0"
ratelimit_meter = "5.0"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
serde_urlencoded = "0.6"
erased-serde = "0.3"
validator = { version = "0.11.0", features = ["derive"] }
heck = "0.3.1"
futures = { version = "0.3.7", features = ["thread-pool"] }
warp = "0.3.1"
tokio = { version = "1.5", features = ["macros", "rt", "rt-multi-thread", "sync"] }
crossbeam = "=0.7.2"
strum = "0.19"
strum_macros = "0.19"
itertools = "0.9.0"
valico = "2"

[workspace]
# Should specify standalone projects.
members = []
