[package]
name = "astroplant-api"
version = "1.0.0-alpha.1"
authors = ["Thomas Churchman <thomas@kepow.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
astroplant-auth = { path = "../astroplant-auth" }
astroplant-mqtt = { path = "../astroplant-mqtt" }
astroplant-object = { path = "../astroplant-object" }
astroplant-websocket = { path = "../astroplant-websocket" }
async-trait = "0.1"
axum = { version = "0.5", features = ["headers", "ws"] }
bigdecimal = "0.1.0"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "numeric", "r2d2", "chrono", "serde_json", "uuidv07"] }
erased-serde = "0.3"
futures = { version = "0.3.7", features = ["thread-pool"] }
heck = "0.3.1"
itertools = "0.9.0"
once_cell = "1.4"
random-string = { path = "../random-string" }
ratelimit_meter = "5.0"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
serde_urlencoded = "0.6"
strum = "0.19"
strum_macros = "0.19"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "offline" ] }
tokio = { version = "1.19", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.3.0", features = ["cors", "compression-full"] }
tracing = "0.1.21"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde"] }
valico = "2"
validator = { version = "0.11.0", features = ["derive"] }
zipit = { version = "0.3", features = ["chrono-datetime", "tokio-async-io"] }
