[package]
name = "astroplant-mqtt-ingest"
version = "0.1.0"
authors = ["Thomas Churchman <thomas@kepow.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
serde_json = "1.0"
tokio = { version = "1.0", features = [] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-0_8", "with-chrono-0_4"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = "0.8"

astroplant-mqtt = { path = "../astroplant-mqtt" }
