[package]
name = "astroplant-mqtt-ingest"
version = "0.1.0"
authors = ["Thomas Churchman <thomas@kepow.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
serde_json = "1.0"
tokio = { version = "1.0", features = [] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.4"

astroplant-mqtt = { path = "../astroplant-mqtt" }
