[package]
name = "astroplant-mqtt"
version = "0.1.0"
authors = ["Thomas Churchman <thomas@kepow.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
tracing = "0.1"
uuid = "0.8"
futures = { version = "0.3", features = ["thread-pool"] }
futures-timer = "3.0"
crossbeam-channel = "0.3"
rumqttc = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
capnp = "0.10"
capnp-rpc = "0.10"
ratelimit_meter = "5.0"

[build-dependencies]
capnpc = "0.10"

[lib]
name = "astroplant_mqtt"
path = "src/lib.rs"

[[bin]]
name = "astroplant-mqtt-test"
path = "src/bin/mock.rs"
