[package]
name = "astroplant-mqtt"
version = "0.1.0"
authors = ["Thomas Churchman <thomas@kepow.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
async-trait = "0.1"
capnp = "0.14"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", features = ["thread-pool"] }
ratelimit_meter = "5.0"
rumqttc = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["serde"] }

[build-dependencies]
capnpc = "0.14"

[lib]
name = "astroplant_mqtt"
path = "src/lib.rs"

[[bin]]
name = "astroplant-mqtt-test"
path = "src/bin/mock.rs"
