[package]
name = "astroplant-object"
version = "0.1.0"
authors = ["Thomas Churchman <thomas@kepow.org>"]
edition = "2018"

[dependencies]
uuid = "0.8"
futures = "0.3"
tokio = { version = "0.2", features = [ "io-util", "fs" ] }
bytes = "0.5"
rusoto_core = "0.44"
rusoto_credential = "0.44"
rusoto_s3 = "0.44"

[lib]
name = "astroplant_object"
path = "src/lib.rs"
