[package]
name = "astroplant-object"
version = "0.1.0"
authors = ["Thomas Churchman <thomas@kepow.org>"]
edition = "2018"

[dependencies]
uuid = "0.8"
futures = "0.3"
tokio = { version = "1", features = [ "io-util", "fs" ] }
bytes = "1"
rusoto_core = "0.46"
rusoto_credential = "0.46"
rusoto_s3 = "0.46"

[lib]
name = "astroplant_object"
path = "src/lib.rs"
