[package]
name = "astroplant-websocket"
version = "1.0.0-alpha.1"
authors = ["Thomas Churchman <thomas@kepow.org>"]
edition = "2018"

[dependencies]
tracing = "0.1"
warp = "0.3"
jsonrpc-pubsub = "14.0.6"
jsonrpc-core = "14.0.5"
jsonrpc-server-utils = "14.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
futures = { version = "0.3", features = ["compat"] }
